# LMatrix

./: CMakeLists.txt
FEM/: NMatrixDefine.h
FEM/ErrorCompare/: ErrorCompare.cpp  ErrorCompare.h
FEM/FEMCoreIdea/: AssemblyMatrix.cpp  AssemblyMatrix.h  AssemblyVector.cpp  AssemblyVector.h  BoundaryInformation.cpp  BoundaryInformation.h  CoefficientFunction.cpp  CoefficientFunction.h  FEMSolver.cpp  FEMSolver.h  FeBasisFunction.cpp  FeBasisFunction.h  GenerateMatrixPbTb.cpp  GenerateMatrixPbTb.h  test.cpp
FEM/SolverMethod/: DirectMethod.cpp  DirectMethod.h  IterativeMethod.cpp  IterativeMethod.h  SolveEigenValue.cpp  SolveEigenValue.h  SolveLinearEquations.cpp  SolveLinearEquations.h
FEM/SolverMethod/Method_Test/: Gmres.cpp  Gmres.h  Tri-diagonal Matrices Thomas Algorithm.md
FEM/SolverMethod/Method_Test/BicgStab/: LinearEqn.cpp  LinearEqn.h  Matrix.cpp  Matrix.h  VectorOperator.h  bicgTest.cpp
FEM/Tools/: PrintTools.cpp  PrintTools.h  SymbolsOperat.h  TypeConversion.h
